--- a/myappAngular/src/styles.css
+++ b/myappAngular/src/styles.css
@@ -1,3 +1,12 @@
 .card{
   margin-top:1rem;
 }
+.state-alivrer{
+  color:rgb(224, 22, 22);
+}
+.state-encours{
+  color:rgb(28, 28, 156);
+}
+.state-livree{
+  color:rgb(15, 116, 15);
+}
