--- a/myappAngular/src/app/items/containers/list-items/list-items.component.html
+++ b/myappAngular/src/app/items/containers/list-items/list-items.component.html
@@ -1,16 +1,7 @@
-<div class="container">
+<div class="container" >
+<ng-container *ngFor="let cmd of collection">
+    <app-item-component [item]="cmd"></app-item-component>
 
-    <div class="card" *ngFor="let item of collection">
-        <div class="card-header">
-         {{item.state}}
-        </div>
-        <div class="card-body">
-          <h5 class="card-title"> {{item.name}}</h5>
-          <p class="card-text"> {{item.reference}}</p>
-          <a href="#" class="btn btn-primary"> go somwhere</a>
-        </div>
-      </div>
-
+</ng-container>
 
 </div>
-
