fin projet angular

--- a/myappAngular/src/app/shared/components/nav/nav.component.html
+++ b/myappAngular/src/app/shared/components/nav/nav.component.html
@@ -12,8 +12,12 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/list"  >list</a>
       </li>
+
       <li class="nav-item">
         <a class="nav-link" href="/add">add</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/list2"  >list2</a>
       </li>
 
     </ul>
