--- a/myappAngular/src/app/items/containers/list-items/list-items.component.html
+++ b/myappAngular/src/app/items/containers/list-items/list-items.component.html
@@ -1,5 +1,5 @@
 <div class="container" >
-<ng-container *ngFor="let cmd of collection">
+<ng-container *ngFor="let cmd of collection | async">
     <app-item-component [item]="cmd"></app-item-component>
 
 </ng-container>
