--- a/myappAngular/src/app/shared/components/item-component/item-component.component.html
+++ b/myappAngular/src/app/shared/components/item-component/item-component.component.html
@@ -17,6 +17,7 @@
                {{state.ENCOURS}}</button>
               <button  class="btn btn-primary" *ngIf="state.ENCOURS===item.state" (click)= "changeState(state.LIVREE)">
                   {{state.ALIVRER}}</button>
+                  <button type="button" class="btn btn-danger" (click)= "delete()">supprimer</button>
            </div>
       </div>
 
